--- a/index.html
+++ b/index.html
@@ -79,19 +79,17 @@
             </ul>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This project is a visual representation of the a beautiful scenery of nature and C++ is the coding Language<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;used throughtout this computer graphics project. This project involves grapics in day ,night and rainy.</p>
             <ul>
-                <li><h4>Online Buss Booking:<h4></li>
+                <li><h4>Online Bus Booking:<h4></li>
                 </ul>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The main objective of the project was to book a bus through online in a very simple manner. It containes some <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;web pages and takes the required information from the user, generates ticket and stores in a databse.</p>
-                <ul>
-                <li><h4>Mobile calculator App:<h4></li>
-                </ul>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;It is a Android mobile simple Calculator app. BAck end is done completly using java</p>
+               
                 <h4 class="two">Extra Curricular Activities</h4>
                 <ul>
                     <li>	Participated in inter-school volleyball tournaments.</li>
                     <li>	Participated in Android App development workshop.</li>
                     <li>	Participated in drawing,quiz compitations.</li>
                     <li>	Participated in Web development workshop.</li>
+                    <li>    Developed a simple Mobile calculator App.</li>
                  
                 </ul>
                 <h4 class="two">personel profile</h4>
